2006-01-13  Larry Jones  <lawrence.jones@ugs.com>

	* mkmodules.c (config_contents): Change SystemAuth to yes to match
	the default value.  Add missing newline in RereadLogAfterVerify.

2006-01-09  Larry Jones  <lawrence.jones@ugs.com>

	* commit.c (remove_file): Record correct revision in history file.
	(Reported by Chris Reed <cr@progress.com>.)

2005-12-07  Derek Price  <derek@ximbiot.com>

	* client.c (start_server), root.c (method_names), root.h (CVSmethod):
	Handle :extssh: as a kindness to Eclipse users.
	(Suggestion from Joseph P. Skudlarek <Jskud@Jskud.com>.)

2005-12-06  Mark D. Baushke  <mdb@gnu.org>

	* buffer.c (stdio_buffer_shutdown): No longer assert() the
	fstat(). Use error (0, ...) instead of error (1, ...) to avoid
	infinite loops. (patch #4678)
	Patch adapted from "Allan L. Bazinet" <allan.bazinet@gmail.com>

2005-11-10  Larry Jones  <lawrence.jones@ugs.com>

	* commit.c (commit): Complain about obsolete -n option if not in
	server mode.

2005-11-09  Derek Price  <derek@ximbiot.com>

	* sanity.sh (pserver-4.2): Accept a "no such sytem user" message when
	a root attempt is made.

2005-09-30  Larry Jones  <lawrence.jones@ugs.com>

	* expand_path.c (expand_path): Fix memory leaks.

2005-09-29  Paul Eggert  <eggert@CS.UCLA.EDU>
	    Derek Price  <derek@ximbiot.com>

	* client.c (handle_m, handle_e): Remove incomplete workaround for
	O_NONBLOCK problem; no longer needed because of the fix below.
	(start_rsh_server): We need the O_NONBLOCK fix, so pass 'true' to
	piped_child to enable the workaround.
	* cvs.h (piped_child): New bool argument saying whether O_NONBLOCK
	fix is needed.  All uses changed.
	* run.c (work_around_openssh_glitch): New function.
	(piped_child): Use it if the fix is requested.  Avoid call call to
	vfork with undefined behavior.

2005-09-26  Conrad T. Pino  <Conrad@Pino.com>

	* rcs.c: Use "#ifdef HAVE_FSYNC" just like every where else.

2005-09-25  Derek Price  <derek@ximbiot.com>
